@@ -12,6 +12,9 @@ Changelog
   back to a Zope3-style interface.
   [hannosch, witsch]
 
+- Fixed a bug which deletes an object in the acquisition path instead of 
+  the original object in case of a catalog inconsistency. This closes #9046.
+  [pilz]
 
 3.3rc5 - August 1, 2009
 -----------------------
